@startuml Observer 패턴(김동석)

hide empty members
hide empty methods

title Observer 패턴(김동석)
header https://github.com/bluedskim/javaDesignPatterns
footer 작성시각 %date("yyyy.MM.dd' 'HH:mm")

interface PropertyChangeListener

class NewsAgency {
    PropertyChangeSupport support
    void addPropertyChangeListener(PropertyChangeListener pcl)
    void removePropertyChangeListener(PropertyChangeListener pcl)
    void setNews(String news)
}

class NewsChannel {
    String theMostRecentNews
    void propertyChange(PropertyChangeEvent evt)
    String getNews()
    void setNews(String news)
}

NewsAgency ..> PropertyChangeSupport
NewsChannel ..|> PropertyChangeListener
PropertyChangeSupport o- PropertyChangeListener

@enduml